<resources>
    <string name="app_name">Authentication Sample</string>
    <string name="main_content">Main Content</string>
    <string name="back">Back</string>
</resources>